k8s/user-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-svc-deployment
  labels:
    app: user-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-svc
  template:
    metadata:
      labels:
        app: user-svc
    spec:
      containers:
        - name: user-svc
          image: nuhman9260/hosp-connect-user-svc:latest
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: user-svc-service
spec:
  selector:
    app: user-svc
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
